--- a/TwitchStoryGeneratorBot.csproj
+++ b/TwitchStoryGeneratorBot.csproj
@@ -283,6 +283,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\GeneratorUI.cs" />
     <Compile Include="Assets\Scripts\ChatBot.cs" />
     <Compile Include="Assets\Scripts\Chatter.cs" />
     <Compile Include="Assets\Scripts\IRC\ChatGetter.cs" />
