--- a/TwitchStoryGeneratorBot.csproj
+++ b/TwitchStoryGeneratorBot.csproj
@@ -291,6 +291,7 @@
     <Compile Include="Assets\Scripts\IRC\PingSender.cs" />
     <Compile Include="Assets\Scripts\StateController.cs" />
     <Compile Include="Assets\Scripts\TEMPGUI.cs" />
+    <Compile Include="Assets\SelfDestruction.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
